cmake_minimum_required(VERSION 3.0)
project(C++)

set(CMAKE_CXX_STANDARD 14)

# 第一次实验
add_executable(P206-2 P206-2.c)

# 第二次实验
add_executable(P208-3 P208-3.c)

# 第三次实验
add_executable(P217-3 P217-3.cpp)
add_executable(217-3 217-3.cpp)
# 第四次实验
add_executable(P217-8 P217-8.cpp)
add_executable(P217-8-E P217-8-E.cpp)
# 课堂
add_executable(queue queue.cpp)
# dfs
add_executable(DFS dfs.cpp)
#Triad
add_executable(Triad Triad.c)
#稀疏矩阵
add_executable(P229-1 P229-1.cpp)
#稀疏矩阵
add_executable(229-1c 229-1.c)
#二叉树
add_executable(P231-6 P231-6.cpp)
add_executable(P231-7 P231-7.cpp)
##图
add_executable(P238-1 P238-1.cpp)
add_executable(P240-2 P240-2.cpp)
add_executable(P240-2-2 P240-2-2.cpp)
add_executable(P241-1 P241-1.cpp)